<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordsINP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="you_entered">You\'ve entered:</string>
    <string name="please_repeat">Please repeat:</string>
    <string name="score">Score:</string>
    <string name="lives">Lives:</string>
    <string name="gameover">GAMEOVER</string>
    <string name="you_got">You\'ve got</string>
    <string name="you_scores">Scores</string>
    <string name="back_button">Back</string>
    <string name="settings">Settings</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="help_string">Available words not found! Select list of allowed words at settings.</string>
    
    <string name="button_edit">Edit</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="new_word">Add word</string>
    <string name="long_click_dialog_title">Select action</string>
    <string name="dialog_edit_title">Edit word</string>
    <string name="empty_word">Empty input!</string>

    <string-array name="words">
        <item>apple</item>
        <item>street</item>
        <item>city</item>
        <item>computer</item>
        <item>table</item>
        <item>development</item>
        <item>performance</item>
        <item>book</item>
        <item>teacher</item>
        <item>school</item>
        <item>juice</item>
        <item>entertainment</item>
        <item>sport</item>
        <item>pencil</item>
        <item>cartoon</item>
        <item>film</item>
        <item>music</item>
        <item>shirt</item>
        <item>pants</item>
        <item>newspaper</item>
        <item>magazine</item>
        <item>picture</item>
        <item>suit</item>
        <item>bathroom</item>
        <item>clock</item>
        <item>justice</item>
        <item>defendant</item>
        <item>significance</item>
        <item>necessity</item>
        <item>jacket</item>
        <item>vocabulary</item>
        <item>procedure</item>
        <item>victim</item>
        <item>accused</item>
        <item>prosecution</item>
        <item>injury</item>
        <item>crime</item>
        <item>commitment</item>
        <item>ball</item>
        <item>implementation</item>
        <item>execution</item>
        <item>enforcement</item>
        <item>exercise</item>
        <item>ambassador</item>
        <item>council</item>
        <item>ammendment</item>
        <item>lamp</item>
        <item>government</item>
        <item>obsession</item>
        <item>sea</item>
        <item>door</item>
        <item>bag</item>
        <item>agreement</item>
        <item>dog</item>
        <item>cat</item>
        <item>treaty</item>
        <item>face</item>
        <item>mouse</item>
        <item>hostility</item>
        <item>tea</item>
        <item>cake</item>
        <item>birthday</item>
        <item>happiness</item>
        <item>whisper</item>
        <item>floor</item>
        <item>elevator</item>
        <item>refrigerator</item>
        <item>stove</item>
        <item>stone</item>
        <item>bus</item>
        <item>car</item>
        <item>trolleybus</item>
        <item>coach</item>
        <item>bitch</item>
        <item>children</item>
        <item>brother</item>
        <item>monkey</item>
        <item>sister</item>
        <item>squirrel</item>
        <item>arraignment</item>
        <item>house</item>
        <item>edifice</item>
        <item>news</item>
        <item>letter</item>
        <item>dress</item>
        <item>skirt</item>
        <item>microwave</item>
        <item>tart</item>
        <item>convention</item>
        <item>investigation</item>
        <item>treatment</item>
        <item>cognition</item>
        <item>trial</item>
        <item>competition</item>
        <item>circumstance</item>
        <item>consequence</item>
        <item>coercion </item>
        <item>damage </item>
        <item>testament</item>
        <item>acceleration</item>
    </string-array>

    <string name="title_activity_settings">SettingsActivity</string>

</resources>